<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/titulo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/titulo"
       android:textSize="@dimen/tamaño_letra"
       android:textStyle="bold"
       android:layout_centerHorizontal="true"
       />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:layout_below="@+id/titulo">

   <EditText
       android:id="@+id/editNombre"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/espacio_top"
       android:hint="@string/nombre"
       android:inputType="text"
       />

   <EditText
       android:id="@+id/editApellido"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/espacio_top"
       android:hint="@string/Apellido"
       android:inputType="text"/>

      <EditText
          android:id="@+id/editEdad"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/espacio_top"
          android:hint="@string/Edad"
          android:inputType="number"/>
      
      <EditText
          android:id="@+id/editCorreo"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/espacio_top"
          android:hint="@string/correo"
          android:inputType="text"/>
      <Button
          android:id="@+id/btnAceptar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/btnAceptar"/>
      
   </LinearLayout>






</RelativeLayout>